# geno_f18_process

./: .gitignore  CMakeLists.txt  ReadMe.md  f18init.cpp  f18init.h  finit.cpp  geno_f18_process.sln  merge.cpp  param.cpp  param.h  pattern.cpp  sequence.cpp  sequence.h  utilities.cpp
geno_f18_process/: f18init.cpp  f18init.h  geno_f18_process.vcxproj  geno_f18_process.vcxproj.filters  merge.cpp  merge.h  pattern.cpp  pattern.h  sequence.cpp  sequence.h  tmp.best.fas  tmp.fa  types.h  utilities.cpp  utilities.h
include/: merge.h  param.h  sequence.h  types.h  utilities.h
src/: finit.cpp  param.cpp  param.h  pattern.cpp  pattern.h  sequence.cpp  sequence.h
